apps/base/scrutiny/master/deployment.yaml
# Reference:
# https://github.com/keycloak/keycloak/discussions/12594
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrutiny
spec:
  replicas: 1
  selector:
    matchLabels:
      component: app
  template:
    metadata:
      labels:
        component: app
    spec:
      containers:
        - name: scrutiny
          image: ghcr.io/analogj/scrutiny:master-web
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 400Mi
            limits:
              cpu: 300m
              memory: 500Mi
          # readinessProbe:
          #   initialDelaySeconds: 30
          #   timeoutSeconds: 30
          #   httpGet:
          #     path: /realms/sequoia
          #     port: 8080
